<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.ttu.ttu.menu.Menu"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:orientation="horizontal"
        android:background="#4cb2cf"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            tools:ignore="NestedWeights,UselessLeaf" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.1"
            android:weightSum="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/aboutttulogo"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:contentDescription=""
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/word2"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            tools:ignore="UselessLeaf" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginBottom="1dp">

        <!--slideShow開始-->
        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <WebView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/aboutTTU"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />
        </LinearLayout> -->
        <!--slideShow結束-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            tools:ignore="NestedWeights"
            android:layout_marginBottom="15dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="DisableBaselineAlignment,UselessParent"
                android:layout_gravity="center"
                android:weightSum="3"
                android:layout_marginBottom="5dp">

                <!--第一列開始-->
                <LinearLayout
                    android:orientation="vertical"
                    android:weightSum="3"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:weightSum="1"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        tools:ignore="NestedWeights">

                        <ImageButton
                            android:id="@+id/board_button"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.8"
                            android:src="@mipmap/board"
                            android:scaleType="fitCenter"
                            android:background="@color/white"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.3"
                            android:text="@string/board"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:gravity="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:weightSum="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <ImageButton
                            android:id="@+id/traffic"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.8"
                            android:src="@mipmap/traffic"
                            android:scaleType="fitCenter"
                            android:background="@color/white"
                            tools:ignore="ContentDescription" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.3"
                            android:text="@string/traffic"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:gravity="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:weightSum="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <ImageButton
                            android:id="@+id/aboutttu"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.8"
                            android:src="@mipmap/aboutttu"
                            android:scaleType="fitCenter"
                            android:background="@color/white"
                            tools:ignore="ContentDescription" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.3"
                            android:text="@string/aboutttu"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:gravity="center" />
                    </LinearLayout>



                </LinearLayout>
                <!--第一列結束-->

                <!--第二列開始-->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:weightSum="3"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:weightSum="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        tools:ignore="NestedWeights">

                        <ImageButton
                            android:id="@+id/cis"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="0.8"
                            android:src="@mipmap/searchgrade"
                            android:scaleType="fitCenter"
                            android:background="@color/white"
                            tools:ignore="ContentDescription" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.3"
                            android:text="@string/InformationSystems"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:gravity="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:weightSum="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <ImageButton
                            android:id="@+id/telemail"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="0.8"
                            android:src="@mipmap/telemail"
                            android:scaleType="fitCenter"
                            android:background="@color/white"
                            android:contentDescription=""
                            tools:ignore="ContentDescription" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.3"
                            android:text="@string/telemail"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:gravity="center" />
                    </LinearLayout>

                    <!--多一行 為了排版使用-->
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:weightSum="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        >

                        <ImageButton
                            android:id="@+id/signButton"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.8"
                            android:src="@mipmap/traffic"
                            android:scaleType="fitCenter"
                            android:background="@color/white"
                            tools:ignore="ContentDescription" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.3"
                            android:text="@string/sign"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:gravity="center" />
                    </LinearLayout>
                    <!--多一行 為了排版使用-->

                </LinearLayout>
                <!--第二列結束-->

                <!--第三列開始-->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:weightSum="3"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:weightSum="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        tools:ignore="NestedWeights">

                        <ImageButton
                            android:id="@+id/safe"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="0.8"
                            android:src="@mipmap/emergency"
                            android:scaleType="fitCenter"
                            android:background="@color/white"
                            tools:ignore="ContentDescription" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.3"
                            android:text="@string/emergency"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:gravity="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:weightSum="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <ImageButton
                            android:id="@+id/schedule"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="0.8"
                            android:src="@mipmap/schedule"
                            android:scaleType="fitCenter"
                            android:background="@color/white"
                            tools:ignore="ContentDescription" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.3"
                            android:text="@string/schedule"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:gravity="center" />
                    </LinearLayout>

                    <!--多一行 為了排版使用-->
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:weightSum="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="invisible">

                        <ImageButton
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.8"
                            android:src="@mipmap/traffic"
                            android:scaleType="fitCenter"
                            android:background="@color/white"
                            tools:ignore="ContentDescription" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.3"
                            android:text="@string/traffic"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:gravity="center" />
                    </LinearLayout>
                    <!--多一行 為了排版使用-->

                </LinearLayout>
                <!--第三列結束-->

            </LinearLayout>
            <!--包三行結束-->

        </LinearLayout>
        <!--按鍵結束-->
        <!--尾欄開始-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="DisableBaselineAlignment,UselessParent"
            android:layout_gravity="center"
            android:background="#4cb2cf"
            android:layout_weight="19"
            android:gravity="center">

            <TextView
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="20sp"/>
        </LinearLayout>
        <!--尾欄結束-->

    </LinearLayout>

</LinearLayout>